snapshots/membership/added.snap
---
source: src/events/membership.rs
info:
  author_name_length: 8
  colour_hex: "#1E1E2E"
  description_length: 0
  title_length: 48
---
embeds:
  - author:
      icon_url: "https://avatars.githubusercontent.com/u/58985301?v=4"
      name: sgoudham
      url: "https://github.com/sgoudham"
    color: 1973806
    description: ~
    title: "[catppuccin-rfc] backwardspy added to staff team"
    url: "https://github.com/orgs/catppuccin-rfc/teams/staff"
